--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -4,6 +4,15 @@ package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.contain
 
 class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : org.kevoree.modeling.api.util.ActionType, val refName : String, val element : Any?) {
     fun run() {
+
+#if($ctx.persistence())
+        var casted = target as KMFContainerPersistenceImpl
+        if(!casted.inResolution){
+            target.reflexiveMutator(mutatorType,refName, element,true,true)
+        }
+    #else
         target.reflexiveMutator(mutatorType,refName, element,true,true)
+#end
+
     }
 }
