--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/ConstGenerator.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/ConstGenerator.vm
@@ -19,7 +19,7 @@ object Constants {
     public val SHORT_DEFAULTVAL : Short = 0
     public val LONG_DEFAULTVAL : Long = 0
     public val DOUBLE_DEFAULTVAL : Double = 0.0
-    public val FLOAT_DEFAULTVAL : Float = 0.0
+    public val FLOAT_DEFAULTVAL : Float = 0.toFloat()
     public val BYTE_DEFAULTVAL : Byte = 0
 
 #foreach($key in $names.keySet())
