--- a/org.kevoree.modeling.cpp.generator/src/main/resources/templates/destructor_ref.vm
+++ b/org.kevoree.modeling.cpp.generator/src/main/resources/templates/destructor_ref.vm
@@ -3,7 +3,7 @@
 #* @vtlvariable name="debug" type="java.lang.String" *#
 
 
-for ( std::unordered_map<string,${type}*>::iterator it = ${refname}.begin();  it != ${refname}.end(); ++it)
+for ( std::map<string,${type}*>::iterator it = ${refname}.begin();  it != ${refname}.end(); ++it)
 {
 ${type} * current = it->second;
 if(current != NULL)
