--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
@@ -9,7 +9,7 @@ package ${packageName}.cloner
 class DefaultModelCloner() : org.kevoree.modeling.api.ModelCloner {
 
 override fun createContext(): MutableMap<org.kevoree.modeling.api.KMFContainer, org.kevoree.modeling.api.KMFContainer> {
-        #if($ctx.getJS())
+        #if($ctx.js())
         return java.util.HashMap<org.kevoree.modeling.api.KMFContainer,org.kevoree.modeling.api.KMFContainer>()
         #else
         return java.util.IdentityHashMap<org.kevoree.modeling.api.KMFContainer,org.kevoree.modeling.api.KMFContainer>()
