--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -280,7 +280,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     }
 
 
-#if(!$ctx.getJS())
+#if(!$ctx.js())
     override fun findByPath<A>(query: String, clazz: Class<A>): A? {
         try {
             val res = findByPath(query)
