--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -77,7 +77,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         visit(cleanCacheVisitor,true,true,false)
 }
 
-#if($ctx.genSelector)
+#if($ctx.genSelector())
 
 #else
     override fun selectByQuery(query : String) : List<Any> {
