--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/VisitMethods.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/VisitMethods.vm
@@ -5,7 +5,7 @@
 
 ##if(!$currentClass.getEAllReferences().isEmpty())
 override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursive : Boolean, containedReference : Boolean,nonContainedReference : Boolean){
-            #if($ctx.persistence())
+            #if($ctx.persistence)
             checkLazyLoad()
             #end
             visitor.beginVisitElem(this)
@@ -15,15 +15,15 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
             if(containedReference){
                     #set($firstGeneratedCont = false)
                 #end
-                visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
+                visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
                 #if($ref.isMany())
                     for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
-                        internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                        internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                     }
                 #else
-                    internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                    internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                 #end
-                visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
             #end
             #if(!$firstGeneratedCont)
             }
@@ -35,15 +35,15 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
            if(nonContainedReference){
                             #set($firstGeneratedRef = false)
                         #end
-                        visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
+                        visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
                         #if($ref.isMany())
                             for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
-                                internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                                internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                             }
                         #else
-                            internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                            internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                         #end
-                        visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                        visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                     #end
                 #end
            #if(!$firstGeneratedRef)
@@ -55,11 +55,11 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
 
 #if(!$currentClass.getEAllAttributes().isEmpty())
 override fun visitAttributes(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){
-    #if($ctx.persistence())
+    #if($ctx.persistence)
     checkLazyLoad()
     #end
     #foreach( $att in ${FQNHelper.noduplicate($currentClass.getEAllAttributes())})
-        visitor.visit(${FQNHelper.protectReservedWords($att.getName())},${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Att_${att.getName()},this)
+        visitor.visit(${FQNHelper.protectReservedWords($att.getName())},${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Att_${att.getName()},this)
     #end
 }
 #end
