--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -1,11 +1,11 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
-package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.container
+package ${helper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.container
 
 class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : org.kevoree.modeling.api.util.ActionType, val refName : String, val element : Any?) {
     fun run() {
 
-#if($ctx.persistence())
+#if($ctx.persistence)
         var casted = target as KMFContainerPersistenceImpl
         if(!casted.inResolution){
             target.reflexiveMutator(mutatorType,refName, element,true,true)
