--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -48,13 +48,16 @@ when(metaClassName){
 
     override var compare: org.kevoree.modeling.api.compare.ModelCompare = ${packageName}.compare.DefaultModelCompare()
 
+
+        #if($ctx.timeAware)
     protected fun initObject(elem : org.kevoree.modeling.api.time.TimeAwareKMFContainer){
-    #if($ctx.timeAware)
         if(relativityStrategy == org.kevoree.modeling.api.time.RelativeTimeStrategy.LATEST){
             elem.now = org.kevoree.modeling.api.time.TimePoint(java.util.Date().getTime(),0);
         } else {
             elem.now = relativeTime;
         }
+        #else
+    protected fun initObject(elem : org.kevoree.modeling.api.persistence.KMFContainerProxy){
         #end
         elem.originFactory = this
     }
