--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -22,7 +22,27 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     internal open var internal_containmentRefName : String?
     internal open var internal_readOnlyElem : Boolean
     internal open var internal_recursive_readOnlyElem : Boolean
-    internal open var inboundReferences : java.util.HashMap<String,  MutableList<String>>
+    internal open var internal_inboundReferences : java.util.HashMap<String,  MutableList<String>>
+    internal open var internal_deleteInProgress : Boolean
+
+    protected fun addInboundReference(path : String, refName : String) {
+        if(!internal_deleteInProgress) {
+            internal_inboundReferences.getOrPut(path){java.util.ArrayList<String>()}.add(refName)
+        }
+    }
+
+    protected fun removeInboundReference(path : String, refName : String) {
+        if(!internal_deleteInProgress) {
+            val refs = internal_inboundReferences.get(path)
+            if(refs != null) {
+                if(refs.size() > 1) {
+                    refs.remove(refName);
+                } else {
+                    internal_inboundReferences.remove(path);
+                }
+            }
+        }
+    }
 
 
     protected fun getRootOfModel() : org.kevoree.modeling.api.${formatedFactoryName} {
@@ -35,8 +55,9 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 
     protected fun advertiseInboundRefs(action : org.kevoree.modeling.api.util.ActionType, value : Any?) {
         val root = getRootOfModel()
-        for(inboundElem in inboundReferences.keySet()) {
-            val refList = inboundReferences.get(inboundElem)!!
+        val inbRefTmp = internal_inboundReferences!!
+        for(inboundElem in inbRefTmp.keySet()) {
+            val refList = inbRefTmp.get(inboundElem)!!
             for(ref in refList) {
                 val el = root.findByPath(inboundElem)
                 if(el != null) {
