--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -20,6 +20,7 @@ override fun getVersion() : String { return "${modelVersion}" }
 
 #if($ctx.persistence)
 override val elem_cache: java.util.HashMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.HashMap<String, org.kevoree.modeling.api.KMFContainer>()
+override val modified_elements: java.util.HashMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.HashMap<String, org.kevoree.modeling.api.KMFContainer>()
 #end
 
 #foreach( $class in $classes )
@@ -32,7 +33,7 @@ return tempElem
 }
 #end
 
-override fun #if($ctx.timeAware) obj_create #else create #end (metaClassName : String) : ${ctx.kevoreeContainer}? {
+override fun create(metaClassName : String) : ${ctx.kevoreeContainer}? {
 when(metaClassName){
 #foreach( $class in $classes )
     ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.${helper.fqn($ctx,$class).replace(".","_")} -> { return create${class.getName()}() }
@@ -50,7 +51,9 @@ when(metaClassName){
 
     protected fun initObject(elem : org.kevoree.modeling.api.persistence.KMFContainerProxy){
         elem.originFactory = this
+        monitor(elem)
         #if($ctx.timeAware)
+        (elem as org.kevoree.modeling.api.time.TimeAwareKMFContainer).isResolved = true
         (elem as org.kevoree.modeling.api.time.TimeAwareKMFContainer).now = relativeTime
         (elem as org.kevoree.modeling.api.time.TimeAwareKMFContainer).meta = org.kevoree.modeling.api.time.blob.EntityMeta()
         (elem as org.kevoree.modeling.api.time.TimeAwareKMFContainer).meta!!.metatype = elem.metaClassName()
@@ -60,10 +63,20 @@ when(metaClassName){
 #end
 
 #if($ctx.timeAware)
-override var relativeTime: org.kevoree.modeling.api.time.TimePoint? = null
+override var relativeTime: org.kevoree.modeling.api.time.TimePoint = org.kevoree.modeling.api.time.TimePoint.create("0:0");
 override var queryMap: MutableMap<String, org.kevoree.modeling.api.time.TimePoint> = java.util.HashMap<String, org.kevoree.modeling.api.time.TimePoint>()
+override var timeCache: java.util.HashMap<String, org.kevoree.modeling.api.time.blob.TimeMeta> = java.util.HashMap<String, org.kevoree.modeling.api.time.blob.TimeMeta>()
+
+override fun time(tp: org.kevoree.modeling.api.time.TimePoint): org.kevoree.modeling.api.time.TimeView<${formatedFactoryName}> {
+    val newFactory = Default${formatedFactoryName}()
+    newFactory.datastore = this.datastore;
+    newFactory.relativeTime = tp;
+    return newFactory;
+}
 
 #end
+
+
 
 
 }
