--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -354,7 +354,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         val objFound = findByID(relationName,queryID)
 #if($ctx.persistence)
         if(objFound==null){
-            return (this as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.lookupFrom(query,this)
+            return (this as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.lookup(query)
         }
 #end
         if(subquery != "" && objFound != null){
