alpha 2 / V2 drop meta previous and next, rely only on RBTreeTime

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
@@ -22,6 +22,7 @@ trait ${formatedFactoryName}PersistenceImpl : ${formatedFactoryName}Impl,org.kev
             internal_eContainer = null
             content?.silentlyApplyOn(this)
             internal_eContainer = previousParent
+            originFactory!!.loadInbounds(this)
             inResolution = false
         }
     }
