--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -13,7 +13,7 @@ object cleanCacheVisitor : org.kevoree.modeling.api.util.ModelVisitor() {
     }
 }
 
-trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
+trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer, org.kevoree.modeling.api.util.InboundRefAware {
 
     internal open var internal_eContainer : org.kevoree.modeling.api.${formatedFactoryName}?
     internal open var internal_unsetCmd : RemoveFromContainerCommand?
@@ -22,7 +22,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     internal open var internal_containmentRefName : String?
     internal open var internal_readOnlyElem : Boolean
     internal open var internal_recursive_readOnlyElem : Boolean
-    internal open var internal_inboundReferences : java.util.HashMap<org.kevoree.modeling.api.KMFContainer,  MutableList<String>>
+    //override open var internal_inboundReferences : java.util.HashMap<org.kevoree.modeling.api.KMFContainer,  MutableList<String>>
     internal open var internal_deleteInProgress : Boolean
 
     protected fun addInboundReference(path : org.kevoree.modeling.api.KMFContainer, refName : String) {
@@ -45,9 +45,8 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     }
 
     protected fun advertiseInboundRefs(action : org.kevoree.modeling.api.util.ActionType, value : Any?) {
-        val inbRefTmp = internal_inboundReferences!!
-        for(inboundElem in inbRefTmp.keySet()) {
-            val refList = inbRefTmp.get(inboundElem)!!
+        for(inboundElem in internal_inboundReferences.keySet()) {
+            val refList = internal_inboundReferences.get(inboundElem)!!
             for(ref in refList) {
                 inboundElem.reflexiveMutator(action, ref, value, false, true)
             }
