--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
@@ -2,7 +2,7 @@
 #* @vtlvariable name="formatedFactoryName" type="java.lang.String" *#
 #* @vtlvariable name="classes" type="java.util.List<org.eclipse.emf.ecore.EClassifier>" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
-#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
+#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 
 package ${packageName};
 
