--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/DefaultModelCompare.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/DefaultModelCompare.vm
@@ -1,6 +1,6 @@
 #* @vtlvariable name="packageName" type="java.lang.String" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
-#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
+#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 
 package ${packageName}.compare
 
