--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -1,5 +1,5 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
-#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
+#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 package ${helper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.container
 
 class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : org.kevoree.modeling.api.util.ActionType, val refName : String, val element : Any?) {
