--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/DefaultTraceSequence.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/DefaultTraceSequence.vm
@@ -1,5 +1,5 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
-#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
+#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 
 #set($packName = ${helper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)})
 
