--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -15,6 +15,18 @@ object cleanCacheVisitor : org.kevoree.modeling.api.util.ModelVisitor() {
 
 trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer, org.kevoree.modeling.api.util.InboundRefAware {
 
+
+    #if($ctx.js)
+        private var internal_hashcode : Int?
+        override fun hashCode() : Int{
+             if(internal_hashcode == null){
+                 internal_hashcode = (Math.random() + java.util.Date().getTime()).toInt();
+             }
+             return internal_hashcode!!;
+        }
+    #end
+
+
     internal open var internal_eContainer : org.kevoree.modeling.api.${formatedFactoryName}?
     internal open var internal_unsetCmd : RemoveFromContainerCommand?
 
